# pfc-calc-app

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json
.cursor/: hooks.json
.cursor/hooks/: pre_git_quality_gate.py
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/domain/repositories/: meal_repository.py
backend/app/infrastructure/config/: settings.py
backend/app/infrastructure/db/: models.py  session.py
backend/app/infrastructure/repositories/: stub_meal_repository.py
backend/app/presentation/api/: dependencies.py  schemas.py
backend/app/presentation/api/routes/: meals.py
backend/app/usecases/: list_meals.py
backend/src/pfc_calc/: main.py
backend/src/pfc_calc/domain/: __init__.py
backend/src/pfc_calc/domain/entities/: __init__.py  meal.py
backend/src/pfc_calc/domain/repositories/: meal_repository.py
backend/src/pfc_calc/infrastructure/: __init__.py
backend/src/pfc_calc/infrastructure/db/: models.py  session.py
backend/src/pfc_calc/infrastructure/repositories/: __init__.py  stub_meal_repository.py
backend/src/pfc_calc/presentation/: __init__.py
backend/src/pfc_calc/presentation/api/: dependencies.py  schemas.py
backend/src/pfc_calc/presentation/api/routes/: health.py  meals.py
backend/src/pfc_calc/usecases/: __init__.py  list_meals.py
backend/tests/: conftest.py  test_health.py  test_meals.py
frontend/: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/src/app/: page.tsx
