[project]
name = "pfc-calc-backend"
version = "0.1.0"
description = "FastAPI backend for meal-by-meal PFC tracking."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0,<0.117.0",
  "httpx>=0.28.1,<0.29.0",
  "sqlalchemy>=2.0.41,<2.1.0",
  "psycopg[binary]>=3.2.9,<3.3.0",
  "pydantic-settings>=2.10.1,<2.11.0",
  "uvicorn[standard]>=0.35.0,<0.36.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[dependency-groups]
dev = [
  "pytest>=8.4.1,<8.5.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
